tests/bad/call_non_function.oc
/// fail: Cannot call a non-function type

def main() {
    let x = 5
    println("%d", x())
}
